--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -65,11 +65,19 @@ javafx.classpath.extension=\
     ${java.home}/lib/javaws.jar:\
     ${java.home}/lib/deploy.jar:\
     ${java.home}/lib/plugin.jar
+javafx.deploy.adddesktopshortcut=false
+javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
+javafx.deploy.disable.proxy=false
 javafx.deploy.embedJNLP=true
+javafx.deploy.icon=
+javafx.deploy.icon.native=src/glyphpad/icons/Logo400.png
 javafx.deploy.includeDT=true
+javafx.deploy.installpermanently=false
+javafx.deploy.permissionselevated=false
+javafx.deploy.splash=src/glyphpad/icons/Logo400.png
 # Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
 javafx.disable.concurrent.runs=false
 # Set true to enable multiple concurrent runs of the same WebStart or Run-in-Browser project
@@ -90,6 +98,9 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
+javafx.signing.blob=false
+javafx.signing.enabled=false
+javafx.signing.type=notsigned
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
@@ -101,7 +112,9 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+native.bundling.enabled=true
 platform.active=default_platform
+project.license=gpl30
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
@@ -111,5 +124,6 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
+src.icons.dir=src\\glyphpad\\icons
 src.styles.dir=src\\glyphpad\\styles
 test.src.dir=test
